fix: 修复需求查询与接取中的逻辑删除处理和参数校验
- 在需求市场查询的 SQL 中为 LIKE 条件添加 ESCAPE 子句，防止特殊字符导致查询异常
- 修改行锁查询方法，仅对未逻辑删除的需求加锁，避免锁定已删除数据
- 在需求市场列表接口中增加分页参数校验与限制，防止非法参数
- 优化标签 ID 列表的解析逻辑，支持去重和去除空格
- 统一部分字段类型为 Date 以保持与数据库一致，并初始化 VO 中的列表字段避免返回 null